--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,7 @@ theme: jekyll-theme-cayman
 github:
   is_project_page: true
   repository_url: https://github.com/cl-uh-b/cl-uh-b.github.io
+social:
+  type: Organization
 gems:
   - jekyll-mentions
