--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: CL-UH-B
-description: CL-UH-B
+description: Club Listings at UH Browsery
 google_analytics:
 show_downloads: false
 theme: jekyll-theme-cayman
